apps/99-test/openjardin/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openjardin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openjardin
  template:
    metadata:
      labels:
        app: openjardin
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: openjardin
          image: ghcr.io/linuxserver/webtop:ubuntu-xfce
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: init-scripts
              mountPath: /custom-cont-init.d
      volumes:
        - name: config
          emptyDir: {}
        - name: init-scripts
          configMap:
            name: openjardin-init
            defaultMode: 0755
