apps/99-test/openjardin/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openjardin
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: openjardin
